# c-block-store

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.conf
src/: manage.py
src/api/crud/: auth.py  base.py  block.py  provider.py  user.py
src/api/dependencies/: auth.py
src/api/routes/: auth.py  block.py  health.py  provider.py  user.py
src/api/schemas/: auth.py  base.py  block.py  currency.py  provider.py  user.py
src/api/utils/: jwt.py
src/apps/block/: admin.py  apps.py  models.py  signals.py  tasks.py
src/apps/block/handlers/: __init__.py  base.py  blockchair.py  coinmarketcap.py
src/apps/block/migrations/: 0001_initial.py
src/apps/currency/: apps.py  choices.py  models.py  signals.py  utils.py
src/apps/currency/migrations/: 0001_initial.py
src/apps/provider/: admin.py  apps.py  choices.py  models.py  signals.py
src/apps/provider/migrations/: 0001_initial.py
src/apps/user/: admin.py  apps.py  models.py  validators.py
src/apps/user/migrations/: 0001_initial.py
src/core/config/: celery.py  log.py
src/core/django/: asgi.py  urls.py
src/core/django/db/: models.py
src/core/django/settings/: base.py  development.py  production.py
src/core/django/utils/: __init__.py  module_loading.py
src/core/fastapi/: asgi.py  exceptions.py  urls.py
src/core/fastapi/utils/: health.py
src/scripts/: entrypoint.py  entrypoint.sh  healthcheck.py  healthcheck.sh  logging.sh  start-backend.sh  start-celery.sh
