[tool.poetry]
name = "c-block-store"
version = "0.1.0"
description = ""
authors = ["usik-sviatoslav <usik.sviatoslav.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.6"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.10"
uuid6 = "^2024.7.10"
pyjwt = "^2.10.1"
python-multipart = "^0.0.20"
pydantic = {extras = ["email"], version = "^2.10.6"}

[tool.poetry.group.dev.dependencies]
django-stubs = "^5.1.3"
pre-commit = "^4.1.0"
mypy = "^1.15.0"
isort = "^6.0.0"
black = "^25.1.0"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
flake8-functions = "^0.0.8"
flake8-variables-names = "^0.0.6"
flake8-class-attributes-order = "^0.1.3"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true

[tool.black]
line-length = 120

[tool.flake8]
max-complexity = 8
max-line-length = 120
exclude = [".env", ".git", "poetry.lock", ".pytest_cache", "__pycache__", "venv", "core/django/settings/*.py"]
per-file-ignores = ['__init__.py:F401,F403']
ignore = []

[tool.mypy]
python_version = "3.11"
mypy_path = "./src"
plugins = ["pydantic.mypy", "mypy_django_plugin.main"]
ignore_missing_imports = false
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
show_column_numbers = true
show_error_context = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.django-stubs]
django_settings_module = "core.django.settings.development"
ignore_missing_model_attributes = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
python_files = ["tests.py", "test_*.py", "*_test.py"]
addopts = ["-x", "--ff", "--nf", "-W error", "--color=yes"]

[tool.coverage.run]
branch = true
data_file = "htmlcov/.coverage"
omit = []
